[package]
name = "pattern_of_doom"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
mongodb = "2.5.0"
tokio = { version = "1", features = ["full"] }
ctrlc = "3.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"  
indicatif = "0.17"
futures-util = "0.3" 
figlet-rs = "0.1.0"
once_cell = "1.9"
crossterm = "0.28.1"
ratatui = "0.29.0"
rand ="0.8"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"

[profile.release]
lto = true
panic = "abort"

[package.metadata.winres]
minimum-windows-version = "7.0"